# MobileNetSSD_Demo_AndroidNCNN

./: LICENSE  README.md
app/: build.gradle
app/src/androidTest/java/com/chenty/testncnn/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  mobilenetssd.cpp  mobilenetssd.h
app/src/main/java/com/chenty/testncnn/: AutoFitSurfaceView.java  CameraNcnnFragment.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml  fragment_camera2_basic.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/test/java/com/chenty/testncnn/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
